--- a/template/attend_records.html
+++ b/template/attend_records.html
@@ -10,6 +10,17 @@
 {% block content %}
 {% csrf_token %}
 <h2>出勤簿</h2>
+<div class="form-group">
+  <div class="row justify-content-center d-flex align-items-center">
+    <label class="control-label">確認した勤怠月</label>
+    <div class="col-4">
+      <input type="month" id="search_param">
+    </div>
+    <div class="col-4">
+      <button type="button" id="month_search" class="btn btn-primary btn-sm">検索</button>
+    </div>
+  </div>
+</div>
 {% if attendances %}
   <table class="table">
     <thead>
@@ -36,4 +47,10 @@
 {% else %}
   <div class="p-3 mb-2 bg-light text-dark">勤怠の記録がありません</div>
 {% endif %}
+<script>
+  $('#month_search').on('click', function(){
+    var searchParam = $('#search_param').val();
+    window.location.href = "{% url 'records' %}?year_month=" + searchParam;
+  });
+</script>
 {% endblock %}
