--- a/template/attend_records.html
+++ b/template/attend_records.html
@@ -6,6 +6,9 @@
   <li class="nav-item activate">
     <a class="nav-link disabled" href="{% url 'records' %}">出勤簿</a>
   </li>
+  <li class="nav-item activate">
+    <a class="nav-link" href="{% url 'fix_request' %}">打刻修正</a>
+  </li>
 </ul>
 <span class="navbar-text">
   <a href="{% url 'logout' %}">ログアウト</a>
